--- a/spark-streaming/pom.xml
+++ b/spark-streaming/pom.xml
@@ -61,6 +61,9 @@
                                     <mainClass>com.intelliswarm.eventflow.streaming.StreamingApp</mainClass>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/services/org.apache.spark.sql.sources.DataSourceRegister</resource>
+                                </transformer>
                             </transformers>
                             <filters>
                                 <filter>
@@ -72,6 +75,7 @@
                                     </excludes>
                                 </filter>
                             </filters>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                         </configuration>
                     </execution>
                 </executions>
